# VeriTest

./: .gitignore  .project  CMakeLists.txt  README.md  camke.txt  memory-usage.py
galaxy_sdk/: main.c  main.h  n309_iot_qemu.ld
galaxy_sdk/bsp/include/: board.h  bsp.h  bsp_common.h  device.h  heap_4_noncache.h  platform.h  portmacro.h  qemu_board.h  soc_init.h  soc_sysctl.h  sys_common.h
galaxy_sdk/bsp/src/: intexc_riscv.S  portasm.S  qemu_board.c  startup_riscv.S
galaxy_sdk/config/include/: FreeRTOSConfig.h  vs_conf.h
galaxy_sdk/drivers/include/: e203_uart.h  hal_common.h  hal_dmac.h  hal_gpio.h  hal_pdm.h  hal_uart.h  vsd_error.h
galaxy_sdk/drivers/src/: hal_dmac.c  hal_gpio.c  hal_pdm.c  hal_uart.c
galaxy_sdk/modules/include/: os_adapter.h  uart_printf.h  vpi_error.h  vpi_event.h  vpi_event_def.h  vpi_list.h  vpi_sw_timer.h  vs_logging.h
galaxy_sdk/osal/include/: baremental_adapter.h  freertos_adapter.h  osal_adapter.h  osal_event_api.h  osal_heap_api.h  osal_lock_api.h  osal_notify_api.h  osal_semaphore_api.h  osal_sys_state_api.h  osal_task_api.h  osal_time_api.h
galaxy_sdk/prebuilts/bluetooth/health/: rpmsg_ctlr.img
galaxy_sdk/prebuilts/bluetooth/health/include/: addr.h  att.h  bluetooth.h  bt_buf.h  bt_system.h  bt_util.h  conn.h  crypto.h  direction.h  gap.h  gatt.h  hci.h  hci_err.h  hci_types.h  hci_veri_vs.h  ipc_core_sync.h  iso.h  le_audio.h  uuid.h  vs_util.h  vsbt_config.h
galaxy_sdk/prebuilts/bluetooth/health/sample/: bas.c  peripheral.c
qemu/: .cproject  .project  debug_qemu.launch
